--- a/tasks/logging/elasticsearch/aws/aws.schema.elasticsearch.yml
+++ b/tasks/logging/elasticsearch/aws/aws.schema.elasticsearch.yml
@@ -69,17 +69,25 @@ schemas:
         type: "int"
         description: "Integer to specify the size of an EBS volume."
       vpc_subnets:
-        type: "str"
+        type: "list"
+        elem_type: "str"
         description: "Specifies the subnet ids for VPC endpoint."
       vpc_security_groups:
-        type: "str"
+        type: "list"
+        elem_type: "str"
         description: "Specifies the security group ids for VPC endpoint."
       snapshot_hour:
         type: "int"
         description: "Integer value from 0 to 23 specifying when the service takes a daily automated snapshot of the specified Elasticsearch domain."
       access_policies:
-        type: "str"
+        type: "dict"
         description: "IAM access policy as a JSON-formatted string."
+      wait:
+        type: "bool"
+        description: "Whether to wait for the cluster to be available. Defaults to true."
+      wait_timeout:
+        type: "int"
+        description: "When wait is true, specifies how much time (in seconds) will wait at most. Defaults to 120 seconds."
   list_item_params:
     type: "dict"
     description: "godaddy nameserver parameters list schema"
@@ -107,12 +115,12 @@ schemas:
       instance_count:
         type: "int"
         description: "Number of instances for the cluster."
-      dedicated_master:
-        type: "bool"
-        description: "A boolean value to indicate whether a dedicated master node is enabled."
       zone_awareness:
         type: "bool"
         description: "A boolean value to indicate whether zone awareness is enabled."
+      dedicated_master:
+        type: "bool"
+        description: "A boolean value to indicate whether a dedicated master node is enabled."
       dedicated_master_instance_type:
         type: "str"
         description: "The instance type for a dedicated master node."
@@ -129,17 +137,25 @@ schemas:
         type: "int"
         description: "Integer to specify the size of an EBS volume."
       vpc_subnets:
-        type: "str"
+        type: "list"
+        elem_type: "str"
         description: "Specifies the subnet ids for VPC endpoint."
       vpc_security_groups:
-        type: "str"
+        type: "list"
+        elem_type: "str"
         description: "Specifies the security group ids for VPC endpoint."
       snapshot_hour:
         type: "int"
         description: "Integer value from 0 to 23 specifying when the service takes a daily automated snapshot of the specified Elasticsearch domain."
       access_policies:
-        type: "str"
+        type: "dict"
         description: "IAM access policy as a JSON-formatted string."
+      wait:
+        type: "bool"
+        description: "Whether to wait for the cluster to be available."
+      wait_timeout:
+        type: "int"
+        description: "When wait is true, specifies how much time (in seconds) will wait at most. Defaults to 120 seconds."
   credentials:
     type: "dict"
     description: "AWS elasticsearch credentials schema."
